# bing-wallpaper-downloader

./: .gitignore  .simple-git-hooks.json  .versionrc.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  commitlint.config.js  lefthook.yaml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: nodejs.yml  rust.yml
extra/: bing-wallpaper-downloader.desktop
src/: index.ts  lib.rs  main.rs  models.rs  payload.ts  services.rs
src/models/: app-constants.ts  app-error.ts  app_error.rs  bing-data-payload.ts  bing_data_payload.rs  constants.rs  ng-data-payload.ts
src/services/: bing_client.rs  cli.ts  downloader.service.ts  file_manager.rs  notification.service.ts  notification_manager.rs  wallpaper.service.ts  wallpaper_manager.rs
systemd/: bing-wallpaper.service  bing-wallpaper.timer
tools/: cargo-toml-updater.js
