[package]
name = "bing_wallpaper_downloader"
version = "0.0.0"
authors = ["Andrea Zorzi <andrea.zorzi.za@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["stream", "json"] }
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5"
dirs = "3.0"
notify-rust = "4.0"
wallpaper = "2.0"
log = "0.4"
env_logger = "0.8"