[package]
name = "bing_wallpaper_downloader"
version = "0.3.0"
authors = ["Andrea Zorzi <andrea.zorzi.za@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
dirs = "4.0"
notify-rust = "4"
wallpaper = "3.2"
log = "0.4"
env_logger = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
